# esp32-air-monitor

./: .gitignore  Cargo.toml  build.rs  latest.txt  partitions.csv  sdkconfig.defaults  wiring.md
.cargo/: config.toml
docs/: CONTEXT.md  OTA.md  README.md  ST7789VI.PDF:Zone.Identifier  copilot_instructions.md
scripts/: build-export.sh  build-release.sh  export-ota.sh  flash.sh
src/: battery.rs  board.rs  display.rs  lcd.rs  main.rs  mhz19b.rs  mqtt.rs  ota.rs  sensors.rs  sht31.rs  st7789.rs  touch.rs  wifi.rs
